<resources>
    <string name="app_name">GameGiveawayApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="goBack">Go Back</string>
    <string name="title">Title:</string>
    <string name="cost">Cost:</string>
    <string name="description">Description:</string>
    <string name="publishDate">Publish Date:</string>
    <string name="type">Type:</string>
    <string name="platform">Platforms:</string>
    <string name="endDate">End Date:</string>
    <string name="status">Status:</string>
</resources>